Run a Python script

--- a/.env
+++ b/.env
@@ -42,3 +42,5 @@ TWITTER_ACCESS_TOKEN_KEY=""
 TWITTER_ACCESS_TOKEN_SECRET=""
 TWITTER_TWEET_TAGS=""
 USER_AGENT=""
+PYTHON_INTERPRETER="python3"
+PYTHON_SCRIPT="./src/__test__/python_test.py"
