--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "puppeteer-extra-plugin-stealth": "^2.6.1",
     "pushbullet": "^2.4.0",
     "pushover-notifications": "^1.2.2",
+    "python-shell": "^3.0.0",
     "twitter": "^1.7.1",
     "winston": "^3.3.3"
   },
@@ -63,11 +64,6 @@
       "sort-imports": "error",
       "sort-keys": "error",
       "sort-vars": "error"
-    }
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint"
     }
   }
 }
