Purchase script, untested

--- a/.env
+++ b/.env
@@ -31,7 +31,7 @@ SHOW_ONLY_MODELS=""
 SHOW_ONLY_SERIES=""
 SLACK_CHANNEL=""
 SLACK_TOKEN=""
-STORES=""
+STORES="amazon"
 COUNTRY=""
 SCREENSHOT="false"
 TELEGRAM_ACCESS_TOKEN=""
